force-app/main/default/objects/Grant_Disbursement__c/Grant_Disbursement__c.object-meta.xml
<CustomObject>
    <label>Grant Disbursement</label>
    <nameField>
        <label>Support Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>