force-app/main/default/objects/Grant_Disbursement__c/fields/Amount_to_be_disbursed__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_disbursed__c</fullName>
    <label>Amount to be disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>