force-app/main/default/objects/Grant_Disbursement__c/fields/Grant_Applicantion__c.field-meta.xml
<CustomField>
    <fullName>Grant_Applicantion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Application</label>
    <referenceTo>Grant_Application__c</referenceTo>
    <relationshipLabel>Grant Disbursements</relationshipLabel>
    <relationshipName>Grant_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>