force-app/main/default/objects/Grant_Disbursement__c/fields/Grant_is_disbursed__c.field-meta.xml
<CustomField>
    <fullName>Grant_is_disbursed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Grant is disbursed?</label>
    <type>Checkbox</type>
</CustomField>