force-app/main/default/objects/Grant_Disbursement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grant_Applicant__c</columns>
    <columns>Amount_to_be_disbursed__c</columns>
    <columns>Disbursed_Date__c</columns>
    <columns>Grant_is_disbursed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>